--- a/JcStyle.css
+++ b/JcStyle.css
@@ -47,6 +47,17 @@
     margin: 0px 0px 30px 0px;
 }
 
+.song-table {
+    width: 100%;
+    font-size: 30px;
+    font-weight: bold;
+    margin: 20px 0px 20px 0px;
+}
+
+.song-table td {
+    height: 50px;
+}
+
 .in-line {
     display: inline;
 }
