--- a/JcStyle.css
+++ b/JcStyle.css
@@ -64,15 +64,6 @@
     display: inline;
 }
 
-#artist {
-}
-
-#album {
-}
-
-#release-year {
-}
-
 .hints-table {
     width: 100%;
     background: white;
@@ -103,153 +94,43 @@
     box-shadow: 0px 0px 3px black;
     width: 100%;
     border: 0px;
+    cursor: pointer;
 }
 
-
-
-
-    .jc-object-header {
-        background: var(--darker-blue);
-        text-align: left;
-        max-width: 100%;
-        margin: 10px;
-        border-radius: 5px;
-        height: 50px;
-    }
-
-    .jc-object-column {
-        white-space: nowrap;
-        border-radius: 5px;
-        display: inline-block;
-        color: white;
-        font-weight: bold;
-        padding: 15px 0px 0px 15px;
-        height: 100%;
-    }
-
-    .jc-flex-container {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
-    }
-
-    .jc-plain-object {
-        box-shadow: 0px 0px 3px var(--main-bg-color);
-        margin: 5px;
-        padding: 10px;
-        border-radius: 5px;
-        font-weight: bold;
-        width: 200px;
-    }
-
-    .jc-plain-object-tag {
-        background: var(--main-bg-color);
-        padding: 5px;
-        border-radius: 5px;
-        color: white;
-    }
-
-    .calendar-heading {
-        background: var(--main-bg-color);
-        color: white;
-        font-size: 25px;
-        align-items: center;
-        height: 50px;
-        font-weight: bold;
-    }
-
-    .jc-object {
-        box-shadow: 0px 0px 3px var(--main-bg-color);
-        margin: 5px;
-        padding: 10px;
-        border-radius: 5px;
-        display: block;
-        font-weight: bold;
-        text-decoration: none;
-        color: white;
-        width: 200px;
-    }
-
-    .jc-object:hover {
-        box-shadow: 0px 0px 10px black;
-        cursor: pointer;
-        text-decoration: none;
-        color: black;
-    }
-
-    .jc-grid-row {
-        box-shadow: 0px 0px 3px var(--main-bg-color);
-        border-radius: 5px;
-        margin: 5px;
-        padding: 10px;
-    }
-
-    .jc-grid-label {
-        color: white;
-        font-weight: bold;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        border-radius: 5px;
-        background: var(--main-bg-color);
-        box-shadow: 0px 0px 3px var(--main-bg-color);
-    }
-
-    .green-link {
-        background: var(--my-green);
-        display: block;
-        color: white;
-        text-decoration: none;
-        font-weight: bold;
-        border-radius: 5px;
-        margin: 5px;
-        padding: 5px;
-        box-shadow: 0px 0px 3px var(--main-bg-color);
-    }
-
-    .red-link {
-        background: var(--my-red);
-        display: block;
-        color: white;
-        text-decoration: none;
-        font-weight: bold;
-        border-radius: 5px;
-        margin: 5px;
-        padding: 5px;
-    }
-
-    .red-link:hover {
-        text-decoration: none;
-        box-shadow: 0px 0px 10px black;
-        color: black;
-    }
-
-    .green-link:hover {
-        text-decoration: none;
-        box-shadow: 0px 0px 10px black;
-        color: black;
-    }
-
-    .jc-red-button {
-        margin-bottom: 10px;
-        padding: 10px;
-        display: block;
-        background: red;
-        text-decoration: none;
-        color: white;
-        font-weight: bold;
-        border-radius: 3px;
-        box-shadow: 0px 0px 3px black;
-        width: 100%;
-        border: 0px;
-    }
-
-    .jc-button:hover {
-        text-decoration: none;
-        background: var(--darker-blue);
-        color: white;
-        cursor: pointer;
-    }
-    .is-clickable {
-        cursor: pointer;
-    }
+/* The Modal (background) */
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  }
+  
+  /* Modal Content/Box */
+  .modal-content {
+    background-color: #fefefe;
+    margin: 15% auto; /* 15% from the top and centered */
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%; /* Could be more or less, depending on screen size */
+  }
+  
+  /* The Close Button */
+  .close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+  }
+  
+  .close:hover,
+  .close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+  }
