--- a/JcStyle.css
+++ b/JcStyle.css
@@ -124,7 +124,7 @@
   .close {
     color: #aaa;
     float: right;
-    font-size: 28px;
+    font-size: 40px;
     font-weight: bold;
   }
   
@@ -133,4 +133,14 @@
     color: black;
     text-decoration: none;
     cursor: pointer;
+  }
+
+  .ModalText {
+      font-size: 40px;
+      margin: 30px;
+  }
+
+  .ModalData {
+    margin: 20px;
+    font-size: 20px;
   }
