--- a/jcstyles.css
+++ b/jcstyles.css
@@ -122,7 +122,8 @@
     font-weight: bold;
     font-size: 50px;
 }
-/* The Modal (background) */
+
+/* The Modal */
 .modal {
     display: none; /* Hidden by default */
     position: fixed; /* Stay in place */
@@ -136,7 +137,6 @@
     background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
   }
   
-  /* Modal Content/Box */
   .modal-content {
     background-color: #fefefe;
     margin: 15% auto; /* 15% from the top and centered */
@@ -145,7 +145,6 @@
     width: 80%; /* Could be more or less, depending on screen size */
   }
   
-  /* The Close Button */
   .close {
     color: #aaa;
     float: right;
@@ -167,5 +166,16 @@
 
   .ModalData {
     margin: 20px;
-    font-size: 20px;
+  }
+
+  .jc-input {
+    height: 50px;
+    width: 100%;
+    font-size: 30px;
+  }
+
+  .jc-select {
+      font-size: 30px;
+      height: 50px;
+      width: 200px;
   }
