--- a/jcstyles.css
+++ b/jcstyles.css
@@ -179,3 +179,68 @@
       height: 50px;
       width: 200px;
   }
+
+  /* only appears on bigger desktops */
+  @media screen {
+    .page-title-table th {
+        font-size: 30px;
+    }
+    
+    .title-text {    
+        font-size: 30px;
+    }
+    
+    .large-text {    
+        font-size: 25px;
+    }
+    
+    .medium-text {    
+        font-size: 20px;
+    }
+    
+    .close {
+        font-size: 20px;
+    }
+    
+    .ModalText {
+        font-size: 20px;
+    }
+
+    .jc-button {
+        font-size: 18px;
+        margin: 5px;
+        padding: 5px;
+    }
+    
+    .small-text {
+        font-size: 18px;
+    }
+    .jc-input {
+        font-size: 16px;
+    }
+
+    .jc-select {
+        font-size: 16px;
+    }
+    #song-title-container{
+        font-size: 16px;
+    }
+    
+    .song-table {
+        font-size: 16px;
+    }
+    
+    .page-title-table td {
+        font-size: 14px;
+        margin: 5px;
+    }
+    
+    #hint-info {
+        font-size: 14px;
+    }
+    
+    .hints-table td {
+        padding: 5px;
+        margin: 5px;
+    }
+}
